--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section id="landing" class="section active">
             <div class="stars"></div>
             <div class="content">
-                <h1 class="animate__animated animate__fadeInDown">Happy Birthday!</h1>
+                <h1 class="animate__animated animate__fadeInDown">Happy Birthday Baccha!</h1>
                 <div class="countdown">
                     <div id="countdown-display">
                         <div class="countdown-item">
@@ -102,7 +102,7 @@
         <section id="message" class="section">
             <div class="content">
                 <div class="message-card">
-                    <h2>To My Wonderful Girlfriend</h2>
+                    <h2>To My Beautiful Girlfriend</h2>
                     <p>On your special day, I wanted to create something as unique and beautiful as you are.</p>
                     <p>You bring so much joy and happiness into my life every single day.</p>
                     <p>I cherish every moment we spend together and look forward to celebrating many more birthdays with you.</p>
@@ -132,28 +132,35 @@
                     <!-- Row 1 -->
                     <div class="photo-frame">
                         <div class="photo scratch-item">
-                            <img src="images/gallery1.jpg" alt="Our first date" class="card-img">
+                            <img src="images/gallery1.jpeg" alt="Our first Photo" class="card-img">
                             <canvas class="scratch-overlay"></canvas>
                         </div>
-                        <div class="caption">Our First Date</div>
+                        <div class="caption">Our First Photo in My Phone
+
+
+
+                        </div>
                     </div>
                     <div class="photo-frame">
                         <div class="photo scratch-item">
-                            <img src="images/gallery2.jpg" alt="Amazing trip" class="card-img">
+                            <img src="images/gallery2.jpeg" alt="Amazing trip" class="card-img">
                             <canvas class="scratch-overlay"></canvas>
                         </div>
                         <div class="caption">That Amazing Trip</div>
                     </div>
                     <div class="photo-frame">
                         <div class="photo scratch-item">
-                            <img src="images/gallery3.jpg" alt="Special moment" class="card-img">
+                            <img src="images/gallery3.jpeg" alt="Special moment" class="card-img">
                             <canvas class="scratch-overlay"></canvas>
                         </div>
                         <div class="caption">Our Favorite Memory</div>
                     </div>
                     <div class="photo-frame">
                         <div class="photo placeholder scratch-item">
-                            <p>Add Photo 4</p>
+                            <div class="photo scratch-item">
+                                <img src="images/gallery4.jpeg" alt="Amazing trip" class="card-img">
+                                <canvas class="scratch-overlay"></canvas>
+                            </div>
                             <canvas class="scratch-overlay"></canvas>
                         </div>
                         <div class="caption">Just Because You're Beautiful</div>
@@ -162,31 +169,43 @@
                     <!-- Row 2 - Additional Photos -->
                     <div class="photo-frame">
                         <div class="photo placeholder">
-                            <p>Add Photo 5</p>
+                            <div class="photo scratch-item">
+                                <img src="images/gallery5.jpeg" alt="Amazing trip" class="card-img">
+                                <canvas class="scratch-overlay"></canvas>
+                            </div>
                         </div>
                         <div class="caption">Special Moment</div>
                     </div>
                     <div class="photo-frame">
                         <div class="photo placeholder">
-                            <p>Add Photo 6</p>
+                            <div class="photo scratch-item">
+                                <img src="images/gallery6.jpeg" alt="Amazing trip" class="card-img">
+                                <canvas class="scratch-overlay"></canvas>
+                            </div>
                         </div>
-                        <div class="caption">Adventure Together</div>
+                        <div class="caption">Hands in Hand Forever</div>
                     </div>
                     <div class="photo-frame">
                         <div class="photo placeholder">
-                            <p>Add Photo 7</p>
+                            <div class="photo scratch-item">
+                                <img src="images/gallery7.jpeg" alt="Amazing trip" class="card-img">
+                                <canvas class="scratch-overlay"></canvas>
+                            </div>
                         </div>
-                        <div class="caption">Laughing Together</div>
+                        <div class="caption">Destiny Destination</div>
                     </div>
                     <div class="photo-frame">
                         <div class="photo placeholder">
-                            <p>Add Photo 8</p>
+                            <div class="photo scratch-item">
+                                <img src="images/gallery8.jpeg" alt="Amazing trip" class="card-img">
+                                <canvas class="scratch-overlay"></canvas>
+                            </div>
                         </div>
-                        <div class="caption">Quiet Moments</div>
+                        <div class="caption">Unexpected One</div>
                     </div>
                 </div>
                 <div class="gallery-navigation">
-                    <p class="gallery-info">These are just placeholders - add your own photos and captions!</p>
+                    <p class="gallery-info">ये तस्वीरें हमारी कहानी बयां करती हैं... हमारी हंसी, हमारी यादें और हमारा साथ।!</p>
                     <button class="cta-button" id="gallery-continue">Play Memory Game →</button>
                 </div>
             </div>
@@ -278,7 +297,7 @@
                             <source src="videos/memory2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
-                        <p>Trip to Mountains</p>
+                        <p>Trip to Remember!! The Holy Varanasi</p>
                     </div>
 
                     <div class="video-container">
@@ -434,12 +453,12 @@
                             <p>Answering this question will tell us whether you love me or not...</p>
                         </div>
                         <h3>Question 1:</h3>
-                        <p>What is my favorite food?</p>
+                        <p>मेरी सबसे बड़ी ख्वाहिश क्या है?>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="false">Pizza</button>
-                            <button class="quiz-option" data-correct="true">Biryani</button>
-                            <button class="quiz-option" data-correct="false">Chocolate</button>
-                            <button class="quiz-option" data-correct="false">Sushi</button>
+                            <button class="quiz-option" data-correct="true">Tum</button>
+                            <button class="quiz-option" data-correct="false">Working for Microsoft One Day</button>
+                            <button class="quiz-option" data-correct="false">Meeting MSD In real</button>
+                            <button class="quiz-option" data-correct="false">Getting Defender Before 2030</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
                             <p>Correct! You know me so well! ❤️</p>
@@ -454,12 +473,12 @@
                             <p>Answering this question will tell us whether you love me or not...</p>
                         </div>
                         <h3>Question 2:</h3>
-                        <p>Where did we have our first date?</p>
+                        <p>Which was the first movie that we watched together?</p>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="false">Movie theater</button>
-                            <button class="quiz-option" data-correct="false">Restaurant</button>
-                            <button class="quiz-option" data-correct="true">Beach</button>
-                            <button class="quiz-option" data-correct="false">Park</button>
+                            <button class="quiz-option" data-correct="true">Uri</button>
+                            <button class="quiz-option" data-correct="false">Keshri</button>
+                            <button class="quiz-option" data-correct="false">Pathan</button>
+                            <button class="quiz-option" data-correct="false">Jawan</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
                             <p>Impressive! Your memory is amazing! 🥰</p>
@@ -476,10 +495,10 @@
                         <h3>Question 3:</h3>
                         <p>What's my favorite way to spend a weekend?</p>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="true">Hiking together</button>
+                            <button class="quiz-option" data-correct="false">Hiking together</button>
                             <button class="quiz-option" data-correct="false">Shopping all day</button>
                             <button class="quiz-option" data-correct="false">Watching movies</button>
-                            <button class="quiz-option" data-correct="false">Sleeping in</button>
+                            <button class="quiz-option" data-correct="true">Sleeping in</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
                             <p>You're doing great! 🌟</p>
@@ -496,9 +515,9 @@
                         <h3>Question 4:</h3>
                         <p>What's my favorite color?</p>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="false">Blue</button>
+                            <button class="quiz-option" data-correct="true">Pink</button>
                             <button class="quiz-option" data-correct="false">Green</button>
-                            <button class="quiz-option" data-correct="true">Purple</button>
+                            <button class="quiz-option" data-correct="false">Purple</button>
                             <button class="quiz-option" data-correct="false">Yellow</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
@@ -514,12 +533,12 @@
                             <p>Answering this question will tell us whether you love me or not...</p>
                         </div>
                         <h3>Question 5:</h3>
-                        <p>What's your favorite nickname for me?</p>
+                        <p>What's tag name you call me with occasonally</p>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="false">Sweetheart</button>
-                            <button class="quiz-option" data-correct="true">Siddy</button>
-                            <button class="quiz-option" data-correct="false">Cutie</button>
-                            <button class="quiz-option" data-correct="false">Baby</button>
+                            <button class="quiz-option" data-correct="false">Sid</button>
+                            <button class="quiz-option" data-correct="false">Siddhu</button>
+                            <button class="quiz-option" data-correct="true">Kutwa</button>
+                            <button class="quiz-option" data-correct="false">Chora</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
                             <p>Aww, you remembered! 😊</p>
@@ -534,12 +553,12 @@
                             <p>Answering this question will tell us whether you love me or not...</p>
                         </div>
                         <h3>Question 6:</h3>
-                        <p>What's the song that always makes me dance?</p>
+                        <p>Accha btao to, Who is my inspiration?</p>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="true">Dancing Queen</button>
-                            <button class="quiz-option" data-correct="false">Despacito</button>
-                            <button class="quiz-option" data-correct="false">Shape of You</button>
-                            <button class="quiz-option" data-correct="false">Uptown Funk</button>
+                            <button class="quiz-option" data-correct="false">Myself</button>
+                            <button class="quiz-option" data-correct="true">MS Dhoni</button>
+                            <button class="quiz-option" data-correct="false">Virat Kohli</button>
+                            <button class="quiz-option" data-correct="false">Sachin Tendulkar</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
                             <p>Yes! Let's dance to it later! 💃</p>
@@ -558,7 +577,7 @@
                         <div class="quiz-options">
                             <button class="quiz-option" data-correct="false">Ice Cream</button>
                             <button class="quiz-option" data-correct="false">Chocolate</button>
-                            <button class="quiz-option" data-correct="true">Samosas</button>
+                            <button class="quiz-option" data-correct="true">Biryani</button>
                             <button class="quiz-option" data-correct="false">French Fries</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
@@ -576,9 +595,9 @@
                         <h3>Question 8:</h3>
                         <p>What's my dream vacation destination?</p>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="false">Paris</button>
+                            <button class="quiz-option" data-correct="true">Japan</button>
                             <button class="quiz-option" data-correct="false">Bali</button>
-                            <button class="quiz-option" data-correct="true">Santorini</button>
+                            <button class="quiz-option" data-correct="false">Santorini</button>
                             <button class="quiz-option" data-correct="false">New York</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
@@ -594,12 +613,12 @@
                             <p>Answering this question will tell us whether you love me or not...</p>
                         </div>
                         <h3>Question 9:</h3>
-                        <p>What pet would I most like to have?</p>
+                        <p>मैं सबसे ज़्यादा किस सिंगर के गाने सुनता हूँ?</p>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="false">Cat</button>
-                            <button class="quiz-option" data-correct="true">Dog</button>
-                            <button class="quiz-option" data-correct="false">Fish</button>
-                            <button class="quiz-option" data-correct="false">Hamster</button>
+                            <button class="quiz-option" data-correct="false">Siddhu Moosewala</button>
+                            <button class="quiz-option" data-correct="true">Karan Aujla</button>
+                            <button class="quiz-option" data-correct="false">Arijit Singh</button>
+                            <button class="quiz-option" data-correct="false">Diljit Dosanjh</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
                             <p>Yes! Are you getting me one? 🥺</p>
@@ -614,12 +633,12 @@
                             <p>Answering this question will tell us whether you love me or not...</p>
                         </div>
                         <h3>Question 10:</h3>
-                        <p>What's the one thing I always say I want to learn?</p>
+                        <p>हमारे साथ की सबसे yadgaar trip कौन सी है? Sari hai I know but still</p>
                         <div class="quiz-options">
-                            <button class="quiz-option" data-correct="false">Painting</button>
-                            <button class="quiz-option" data-correct="false">Cooking</button>
-                            <button class="quiz-option" data-correct="false">Singing</button>
-                            <button class="quiz-option" data-correct="true">Playing the guitar</button>
+                            <button class="quiz-option" data-correct="true">Varanasi</button>
+                            <button class="quiz-option" data-correct="false">PrayagRaj</button>
+                            <button class="quiz-option" data-correct="false">Trip On a BiCycle</button>
+                            <button class="quiz-option" data-correct="false">Kota</button>
                         </div>
                         <div class="quiz-feedback correct" style="display:none">
                             <p>You're amazing! Maybe we can learn together? ❤️</p>
