--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section id="landing" class="section active">
             <div class="stars"></div>
             <div class="content">
-                <h1 class="animate__animated animate__fadeInDown">Happy Birthday Baccha!</h1>
+                <h1 class="animate__animated animate__fadeInDown">Happy Birthday!</h1>
                 <div class="countdown">
                     <div id="countdown-display">
                         <div class="countdown-item">
